--- a/lib/chrome/public/manifest.json
+++ b/lib/chrome/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Word Searcher By GPT",
-  "description": "Summarize any article using OpenAI's ChatGPT",
-  "version": "0.0.7",
+  "name": "Grammar Teacher By GPT",
+  "description": "Teaching any sentence using OpenAI's ChatGPT",
+  "version": "0.0.9",
   "manifest_version": 3,
-  "homepage_url": "https://github.com/clmnin/summarize.site",
+  "homepage_url": "https://github.com/keng2021/gpt-English-Teacher",
   "action": {
     "default_title": "test",
     "default_icon": "logo-48.png"
